--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="row">
 
   <div class="container-fluid col-6">
-    <div class="container-fluid mx-auto">
+    <div class="container-fluid px-auto">
       <img src="assets/img/methodocloudgreen.jpg" alt="" class="img-fluid">
     </div>
   </div>
